2009-11-08:
===========

- Implemented the new Color Bucket tool. This fixes issue #2 :)
- Updated the default PaintWeb configuration to include the new color bucket 
tool. Updated the Moodle configuration file as well.
- Updated the default Makefile configuration to include the new color bucket 
tool.
- Fixed a bug in the interface script - it caused failure when registering tools 
which were not in the interface layout.
- Using the new mozImageSmoothingEnabled added in Gecko 1.9.2 for the Canvas 2D 
context. This disables the smooth scaling of the Canvas element on the OLPC XO.
- Updated the English localization file to include the new strings for the color 
bucket tool.

2009-11-06:
===========

- Improvements to the imagesave19.php script used for saving images in Moodle 
1.9.

2009-11-04:
===========

- Fixed a bug in the TinyMCE plugin. The overlay button did not always show in 
the editor. This bug affected Moodle.

2009-10-29:
===========

- Work on Moodle 1.9 integration. Made improvements to the Moodle extension for 
PaintWeb and fixed the imagesave19.php script.

2009-10-10:
===========

- Fixed issue #33 by adding a configuration file for the Makefile. Invoke make 
config.
- Added config-default.mk. Invoking make config adds config-local.mk which 
overwrites any variables from the default config.
- Updated the INSTALL file to include instructions on how to build PaintWeb.
- Made it easier to build PaintWeb by having only a single file to edit paths: 
the config-local.mk file. Until now you had to edit files in the scripts/ 
folder.
- Removed the make moodle target.
- Added the make moodle19 and moodle20 targets, as requested by the Moodle 
developers. The Moodle 2.0 package does not include 1.9-only scripts and 
vice-versa.
- Updated the README.

2009-10-07:
===========

- Using $CFG->libdir in Moodle integration code, as suggested by Martin 
Langhoff. Thanks!
- Fixed the PaintWeb icon in the TinyMCE plugin. Thanks to Mauno Korpelainen for 